--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -2,11 +2,10 @@
 <html lang="ru-RU">
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Test</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width">
-  <link rel="icon" type="image/png" href="./img/icon.png" sizes="16x16">
   <link rel="stylesheet" type="text/css" href="./css/main.min.css" media="screen, projection, print">
 </head>
 <body>
@@ -17,7 +16,7 @@
         <li>Компиляцию Sass в CSS</li>
         <li>Использует для JS файлов модульность <a href="https://learn.javascript.ru/modules#commonjs" target="_blanck">CommonJS</a> с помощью <a href="http://browserify.org/index.html" target="_blanck">browserify</a></li>
       </ul>
-      <a href="page/login.html"> Login </a>
+      <a href="./page/login.html"> Login </a>
     </div>
   </div>
   <script src="./js/vendor.min.js"></script>
