--- a/app/index.html
+++ b/app/index.html
@@ -6,16 +6,13 @@
   <title>Test</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width">
-  <link rel="stylesheet" type="text/css" href="./css/main.min.css" media="screen, projection, print">
+  <link rel="stylesheet" type="text/css" href="/styles/main.css" media="screen, projection, print">
 </head>
 <body>
   <div class="wrapper">
     <div class="maincontent">
-      <h2>Login:</h2>
-      <a href="./page/login.html"> Login </a>
+      Hi there!!!
     </div>
   </div>
-  <script src="./js/vendor.min.js"></script>
-  <script src="./js/bundle.js"></script>
 </body>
 </html>
